@@ -66,7 +66,7 @@ if ($info{'pgdata'} && -d $info{'pgdata'}) {
 }
 unlink $c.'/pg_hba.conf', $c.'/pg_ident.conf', $c.'/postgresql.conf',
     $c.'/start.conf', $c.'/log', $c.'/autovacuum_log', $c.'/pgdata',
-    $c.'/environment';
+    $c.'/environment', $c.'/pg_ctl.conf';
 unlink $info{'logfile'} if defined ($info{'logfile'});
 if ($info{'socketdir'} !~ /^(\/tmp|\/var\/run\/postgresql)\/?$/) {
     rmdir $info{'socketdir'};
